--- a/core/presentation/src/main/res/layout/fragment_camera.xml
+++ b/core/presentation/src/main/res/layout/fragment_camera.xml
@@ -87,10 +87,11 @@
             app:layout_constraintTop_toBottomOf="@id/cameraLayout" />
 
         <ImageView
+            android:id="@+id/completeImageView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="3dp"
-            android:alpha="0.2"
+            android:alpha="0.85"
             android:background="#00FF80"
             android:contentDescription="@string/buttonSendingPicture"
             android:padding="100dp"
