--- a/core/presentation/src/main/res/drawable/rectangle_r8.xml
+++ b/core/presentation/src/main/res/drawable/rectangle_r8.xml
@@ -2,7 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke
-        android:width="3dp"
-        android:color="#D03843" />
+    <corners android:radius="8dp" />
+    <solid android:color="@color/deepMediBaseBack"/>
 </shape>
