--- a/core/presentation/src/main/res/layout/item_profile.xml
+++ b/core/presentation/src/main/res/layout/item_profile.xml
@@ -11,8 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:paddingTop="20dp">
+        android:paddingTop="20dp"
+        android:paddingEnd="20dp">
 
         <TextView
             android:id="@+id/basicInfoTitleTextView"
@@ -31,12 +31,12 @@
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="24dp"
+            android:contentDescription="@string/user_profile_image"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_baseline_account_circle_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/basicInfoTitleTextView"
-            android:contentDescription="@string/user_profile_image" />
+            app:layout_constraintTop_toBottomOf="@id/basicInfoTitleTextView" />
 
         <TextView
             android:id="@+id/userNameTextView"
@@ -63,7 +63,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/userNameTextView"
             app:layout_constraintTop_toBottomOf="@id/userNameTextView"
-            app:layout_constraintBottom_toTopOf="bo"
             tools:text="운전자 누적 벌점: 30" />
 
         <ImageView
