Fix: 레이아웃 설정 오류 해결

--- a/core/presentation/src/main/res/layout/fragment_camera.xml
+++ b/core/presentation/src/main/res/layout/fragment_camera.xml
@@ -102,5 +102,15 @@
             app:layout_constraintTop_toTopOf="@id/borderFrame"
             app:visibleOrGone="@{viewModel.guideState.isSendButtonEnabled}"
             tools:visibility="visible" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:visibleOrGone="@{viewModel.guideState.loading}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
