--- a/core/presentation/src/main/res/drawable/rectangle_r8.xml
+++ b/core/presentation/src/main/res/drawable/rectangle_r8.xml
@@ -3,5 +3,7 @@
     android:shape="rectangle">
 
     <corners android:radius="8dp" />
-    <solid android:color="@color/deepMediBaseBack"/>
+    <stroke
+        android:width="8dp"
+        android:color="@color/deepMediBaseBack" />
 </shape>
