--- a/core/presentation/src/main/res/layout/fragment_result.xml
+++ b/core/presentation/src/main/res/layout/fragment_result.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="fragment"
+            type="org.bmsk.presentation.ui.result.ResultFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,6 +34,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:onClick="@{() -> fragment.navigateToCameraFragment()}"
                     android:padding="16dp"
                     android:text="@string/re_analyze"
                     android:textColor="@color/deepMediRed"
