--- a/core/presentation/src/main/res/layout/item_health_state_content.xml
+++ b/core/presentation/src/main/res/layout/item_health_state_content.xml
@@ -43,12 +43,13 @@
 
         <ImageView
             android:id="@+id/statusImageView"
+            setHealthStatus="@{item.status}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="8dp"
             android:contentDescription="@null"
-            setHealthStatus="@{item.status}"
+            android:minWidth="32dp"
+            android:minHeight="32dp"
             tools:src="@drawable/ic_normal" />
     </LinearLayout>
 </layout>
