--- a/core/presentation/src/main/res/layout/item_health_state_content.xml
+++ b/core/presentation/src/main/res/layout/item_health_state_content.xml
@@ -49,7 +49,8 @@
             android:layout_gravity="center"
             android:contentDescription="@null"
             android:minWidth="32dp"
-            android:minHeight="32dp"
+            android:minHeight="16dp"
+            android:paddingTop="2dp"
             tools:src="@drawable/ic_normal" />
     </LinearLayout>
 </layout>
